--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
         </content> <!-- 内容结束 -->
 
         <footer>
+            This is a copy.
+        </footer>
+        <footer>
             Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
