--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <!-- 图标我全部是iconfont找的，可以自行更换 -->
                 <!---->
 
-                <a class="iconItem" target="_blank" href="https://github.com/Tonny051111">
+                <a class="iconItem" target="_blank" href="https://github.com/tonnychen668">
                     <svg t="1704870335945" class="icon" viewBox="0 0 1024 1024" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" p-id="2487" width="22px" height="22px">
                         <path
@@ -303,7 +303,7 @@
             <div class="projectList">
                 <!-- 项目列表开始 -->
                 <!---->
-                <a class="projectItem" target="_blank" href="https://github.com/Tonny051111/Tonny051111.github.io">
+                <a class="projectItem" target="_blank" href="https://github.com/tonnychen668/tonnychen668.github.io">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
                         <h1>Tonny陳の网站</h1>
