--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
                     <!-- 项目项结束 -->
                 </a>
                 <!---->
-   <a class="projectItem" target="_blank" href="https://github.com/Tonny051111">
+   <a class="projectItem" target="_blank" href="https://blog.tonnychen168.top/">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
-                        <h1>敬请期待...</h1>
-                        <p>功能开发中...</p>
+                        <h1>前往主站</h1>
+                        <p>Go to Tonny's main website.</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i4.png" alt="">
@@ -347,10 +347,7 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy.
-        </footer>
-        <footer>
-            Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy. *#* Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
