--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy. *#* Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy. | Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
