--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head class="blog.tonnychen168.top">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tonny陳</title>
+    <title>Tonny陳の镜像站</title>
     <link rel="icon" href="favicon.ico">
     <meta name="description" content="逆水行舟，不进则退！">
     <meta name="keywords" content="Tonny陳,Tonny,Tonny陳主页,Tonny陳引导页,Tonnychen">
@@ -88,43 +88,18 @@
                 <ul id="line">
                     <li>
                         <div class="focus"></div>
-                        <div>2024-05-13</div>
+                        <div>2024-05-26</div>
                         <div>敬请期待...</div>
                     </li>
                     <li>
                         <div class="focus"></div>
+                        <div>2024-05-25</div>
+                        <div>同步更新v2.2</div>
+                    </li>
+                    <li>
+                        <div class="focus"></div>
                         <div>2024-05-12</div>
-                        <div>v2.1-v2.2更新</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>2024-05-07</div>
-                        <div>v2.0更新发布</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>2024-05-03</div>
-                        <div>v1.0更新发布</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>2024-05-01</div>
-                        <div>Github Pages项目部署</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>2024-04-27</div>
-                        <div>注册域名：tonnychen168.top</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>...</div>
-                        <div>...</div>
-                    </li>
-                    <li>
-                        <div class="focus"></div>
-                        <div>2023-11-11</div>
-                        <div>项目正式建立</div>
+                        <div>镜像站发布v2.1</div>
                     </li>
                 </ul>
             </div>
@@ -269,7 +244,7 @@
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
                         <h1>高考进行时</h1>
-                        <p>2024上师嘉高学子高考顺利，高考加油！</p>
+                        <p>2024上师嘉高学子高考加油！</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i3.png" alt="">
@@ -347,7 +322,7 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy. | Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy from "https://blog.tonnychen168.top/".  |  Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
