--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
-<html class="blog.tonnychen168.top">
+<html class="tonnychen668.github.io">
 
-<head class="blog.tonnychen168.top">
+<head class="tonnychen668.github.io">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tonny陳の镜像站</title>
@@ -109,7 +108,7 @@
 
 
         <header> <!-- 头部开始 -->
-            <div class="welcome">Hello, I'm <span class="gradientText">Tonny陳</span></div>
+            <div class="welcome">你好，我是 <span class="gradientText">Tonny陳的替身！</span></div>
             <div class="description">👦 <span class="purpleText"> Amateur</span> Developer
             </div>
             <div class="description">📝 Be equal to anything!
