--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
         <header> <!-- 头部开始 -->
-            <div class="welcome">你好，我是 <span class="gradientText">Tonny陳的替身！</span></div>
+            <div class="welcome">你好呀，我是 <span class="gradientText">Tonny陳 的替身！</span></div>
             <div class="description">👦 <span class="purpleText"> Amateur</span> Developer
             </div>
             <div class="description">📝 Be equal to anything!
@@ -255,7 +255,7 @@
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
                         <h1>前往主站</h1>
-                        <p>Go to Tonny's main website.</p>
+                        <p>Go to "https://blog.tonnychen168.top/"</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i4.png" alt="">
@@ -321,7 +321,10 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy from "https://blog.tonnychen168.top/".  |  Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy from "https://blog.tonnychen168.top/".
+        </footer>
+        <footer>
+            Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
