--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             d="M512 39.152941c-216.847059 0-391.529412 174.682353-391.529412 391.529412 0 349.364706 391.529412 572.235294 391.529412 572.235294s391.529412-222.870588 391.529412-572.235294c0-216.847059-174.682353-391.529412-391.529412-391.529412z m0 891.482353C424.658824 873.411765 180.705882 686.682353 180.705882 430.682353c0-183.717647 147.576471-331.294118 331.294118-331.294118s331.294118 147.576471 331.294118 331.294118c0 256-243.952941 442.729412-331.294118 499.952941z"
                             fill="#2c2c2c" p-id="1480"></path>
                     </svg>
-                    Shanghai
+                    中国-上海
                 </div>
                 <div class="left-div-item">
                     <svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -58,21 +58,21 @@
                             d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z"
                             fill="#666666" p-id="2475"></path>
                     </svg>
-                    Online
+                    上海电力大学
                 </div>
             </div>
             <div class="left-div left-tag">
                 <div class="left-tag-item">
-                    高中生
-                </div>
-                <div class="left-tag-item">
-                    Windows
+                    大学生
                 </div>
                 <div class="left-tag-item">
                     Linux
                 </div>
                 <div class="left-tag-item">
-                    PowerPoint
+                    Windows
+                </div>
+                <div class="left-tag-item">
+                    Office
                 </div>
                 <div class="left-tag-item">
                     原神
@@ -89,6 +89,11 @@
                         <div class="focus"></div>
                         <div>2024-05-26</div>
                         <div>敬请期待...</div>
+                    </li>
+                    <li>
+                        <div class="focus"></div>
+                        <div>2024-10-13</div>
+                        <div>同步更新v2.4</div>
                     </li>
                     <li>
                         <div class="focus"></div>
@@ -239,14 +244,14 @@
                     <!-- 项目项结束 -->
                 </a>
                 <!---->
-                <a class="projectItem" target="_blank" href="https://ssjg.jdjy.sh.cn/">
+   <a class="projectItem" target="_blank" href="https://www.shiep.edu.cn/">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
-                        <h1>高考进行时</h1>
-                        <p>2024上师嘉高学子高考加油！</p>
+                        <h1>上海电力大学</h1>
+                        <p>爱国、勤学、务实、奋进</p>
                     </div>
                     <div class="projectItemRight">
-                        <img src="/static/img/i3.png" alt="">
+                        <img src="/static/img/i4.png" alt="">
                     </div>
                     <!-- 项目项结束 -->
                 </a>
@@ -321,10 +326,7 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy from "https://blog.tonnychen168.top/".
-        </footer>
-        <footer>
-            Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy from "https://blog.tonnychen168.top/".    Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
