--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <li>
                         <div class="focus"></div>
                         <div>2024-10-13</div>
-                        <div>同步更新v2.4</div>
+                        <div>同步更新v2.3-2.4</div>
                     </li>
                     <li>
                         <div class="focus"></div>
