--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <a class="projectItem" target="_blank" href="https://github.com/tonnychen668/tonnychen668.github.io">
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
-                        <h1>Tonny陳の网站</h1>
+                        <h1>关于本镜像站</h1>
                         <p>Powered by Github Pages</p>
                     </div>
                     <div class="projectItemRight">
