--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy from "https://blog.tonnychen168.top/".    Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy from 'https://blog.tonnychen168.top/' /t Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
