--- a/index.html
+++ b/index.html
@@ -87,8 +87,13 @@
                 <ul id="line">
                     <li>
                         <div class="focus"></div>
-                        <div>2024-10-14</div>
+                        <div>2024-10-15</div>
                         <div>敬请期待...</div>
+                    </li>
+                    <li>
+                        <div class="focus"></div>
+                        <div>2024-10-14</div>
+                        <div>变更域名：tonnychen168.top</div>
                     </li>
                     <li>
                         <div class="focus"></div>
