--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <!-- 项目项开始 -->
                     <div class="projectItemLeft">
                         <h1>前往主站</h1>
-                        <p>Go to "https://blog.tonnychen168.top/"</p>
+                        <p>Go to "https://tonnychen.top/"</p>
                     </div>
                     <div class="projectItemRight">
                         <img src="/static/img/i4.png" alt="">
@@ -331,7 +331,10 @@
         </content> <!-- 内容结束 -->
 
         <footer>
-            This is a copy from 'https://blog.tonnychen168.top/' /t Copyright © 2024 陈昕宇. All rights reserved.
+            This is a copy from 'https://blog.tonnychen168.top/'
+        </footer>
+        <footer>
+            Copyright © 2024 陈昕宇. All rights reserved.
         </footer>
 
     </div>
