--- a/index.html
+++ b/index.html
@@ -334,7 +334,9 @@
             This is a copy from 'https://tonnychen.top/'
         </footer>
         <footer>
-            Copyright © 2024 陈昕宇. All rights reserved.
+            Copyright © 2024 陈昕宇. All rights reserved. |
+            <a href="https://tonnychen.top/">
+			    主站: tonnychen.top </a>
         </footer>
 
     </div>
